--- a/themes/PaperMod/layouts/_default/_markup/render-codeblock.html
+++ b/themes/PaperMod/layouts/_default/_markup/render-codeblock.html
@@ -29,7 +29,7 @@
             <span>{{ if ne $title "" }}{{ $title }}{{ end }}</span>
         </div>
         <div class="pe-code-block-header-right">
-            <button class="pe-code-copy-button">shell</button>
+            <button class="pe-code-copy-button">Copy</button>
         </div>
     </div>
 
