--- a/themes/PaperMod/layouts/_default/single.html
+++ b/themes/PaperMod/layouts/_default/single.html
@@ -42,7 +42,7 @@
   </div>
   {{- end }}
 
-  <footer class="post-footer">
+  <!-- <footer class="post-footer">
     {{- $tags := .Language.Params.Taxonomies.tag | default "tags" }}
     <ul class="post-tags">
       {{- range ($.GetTerms $tags) }}
@@ -55,7 +55,7 @@
     {{- if (and site.Params.ShowShareButtons (ne .Params.disableShare true)) }}
     {{- partial "share_icons.html" . -}}
     {{- end }}
-  </footer>
+  </footer> -->
 
   {{- if (.Param "comments") }}
   {{- partial "comments.html" . }}
