--- a/themes/PaperMod/layouts/partials/footer.html
+++ b/themes/PaperMod/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-{{- if not (.Param "hideFooter") }}
+<!-- {{- if not (.Param "hideFooter") }}
 <footer class="footer">
     {{- if not site.Params.footer.hideCopyright }}
         {{- if site.Copyright }}
@@ -151,4 +151,4 @@
         }
     });
 </script>
-{{- end }}
+{{- end }} -->
