--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -372,23 +372,23 @@
     
     <div class="dash-grid">
         <a href="{{ "htb/" | absURL }}" class="dash-card htb">
-            <div class="card-icon"><img src="{{ "ob/htb.gif" | absURL }}" alt="HTB" class="dash-icon-img"></div>
+            <div class="card-icon"><img src="{{ "images/htb.gif" | absURL }}" alt="HTB" class="dash-icon-img"></div>
             <h3>HTB Collection</h3><span>HackTheBox Writeups</span>
         </a>
         <a href="{{ "offsec/" | absURL }}" class="dash-card offsec">
-            <div class="card-icon"><img src="{{ "ob/offsec.png" | absURL }}" alt="Offsec" class="dash-icon-img"></div>
+            <div class="card-icon"><img src="{{ "images/offsec.png" | absURL }}" alt="Offsec" class="dash-icon-img"></div>
             <h3>OffSec</h3><span>Exam & Labs</span>
         </a>
         <a href="{{ "bug-research/" | absURL }}" class="dash-card bug">
-            <div class="card-icon"><img src="{{ "ob/BugBounty.png" | absURL }}" alt="Bug" class="dash-icon-img"></div>
+            <div class="card-icon"><img src="{{ "images/BugBounty.png" | absURL }}" alt="Bug" class="dash-icon-img"></div>
             <h3>Bug Research</h3><span>CVEs & Findings</span>
         </a>
         <a href="{{ "misc/" | absURL }}" class="dash-card misc">
-            <div class="card-icon"><img src="{{ "ob/misc.png" | absURL }}" alt="Misc" class="dash-icon-img"></div>
+            <div class="card-icon"><img src="{{ "images/misc.png" | absURL }}" alt="Misc" class="dash-icon-img"></div>
             <h3>Misc / 雜項</h3><span>Tools & Random</span>
         </a>
         <a href="{{ "tags/" | absURL }}" class="dash-card tags">
-            <div class="card-icon"><img src="{{ "ob/tags.png" | absURL }}" alt="Tags" class="dash-icon-img"></div>
+            <div class="card-icon"><img src="{{ "images/tags.png" | absURL }}" alt="Tags" class="dash-icon-img"></div>
             <h3>All Tags</h3><span>Browse by Category</span>
         </a>
     </div>
