--- a/layouts/partials/index_profile.html
+++ b/layouts/partials/index_profile.html
@@ -26,7 +26,7 @@
                 <h3>Bug Research</h3><span>CVEs & Findings</span>
             </a>
             <a href="{{ "misc/" | absURL }}" class="dash-card misc">
-                <div class="card-icon"><img src="{{ "images/misc.png" | absURL }}" alt="Misc" class="dash-icon-img"></div>
+                <div class="card-icon"><img src="{{ "images/tags.png" | absURL }}" alt="Misc" class="dash-icon-img"></div>
                 <h3>Misc / 雜項</h3><span>Tools & Random</span>
             </a>
             <a href="{{ "tags/" | absURL }}" class="dash-card tags">
